add restart app

--- a/task_manager.kv
+++ b/task_manager.kv
@@ -157,3 +157,7 @@
             id : fact
             text: 'Do you know'
             on_press: root.show_message(title='Gender equality', content=root._equality_text)
+        
+        SHButton:
+            text: 'Restart'
+            on_press: app.restart_app()
